--- a/package.json
+++ b/package.json
@@ -28,14 +28,11 @@
     "lint": "eslint --ext .js,.jsx .",
     "lint:fix": "eslint --ext .js,.jsx --fix .",
     "prettier": "prettier --check \"./**/*.{js,jsx,ts,tsx,css,md,json}\"",
-    "prettier:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\"",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "prettier:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\""
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "homepage": "https://harrisonhcue.github.io"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@arifszn/blog-js": "^2.0.0",
